php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28751 SoapServer does not call _autoload()
Submitted: 2004-06-12 09:59 UTC Modified: 2004-07-06 09:31 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: Franck at e-Dot dot nl Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.0.0RC3 OS: Linux 2.4.19C13V (Sun Cobalt)
Private report: No CVE-ID: None
 [2004-06-12 09:59 UTC] Franck at e-Dot dot nl
Description:
------------
When using the SoapServer::setClass() function, the server does not call the __autload function when creation of the set class is needed and class does not exists in memory.

Message from SoapServer:
SOAP-ENV:Server Tried to set a non existant class

Reproduce code:
---------------
function __autoload($className) {
	require_once "./classes/" . $className . ".php";
}


ini_set("soap.wsdl_cache_enabled", "0");
$Server = new SoapServer(SoapServerWSDL,wsdl");

//I'm currently using this line as an solution:
//$forceload = new SoapServerActions();

$Server->setClass("SoapServerActions");
$Server->handle();


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-06-14 11:36 UTC] Franck at e-Dot dot nl
Changed Category: PECL Related -> SOAP Related
 [2004-06-14 11:38 UTC] derick@php.net
Fixing the summary.
 [2004-06-14 11:39 UTC] Franck at e-Dot dot nl
Changed Summary.
 [2004-07-06 09:31 UTC] dmitry@php.net
Fixed in CVS HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC