Fixed bug #28751 (SoapServer does not call _autoload())